--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <button class="div" value="/">÷</button>
                 <button class="point" value=".">.</button>
                 <button class="equal">=</button>
-                <button class="back">AC</button>
+                <button class="back">CE</button>
             </div>
         </div>
      </div> 
